// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      disabled={true}
      placeholder=" "
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      disabled={true}
      placeholder=" "
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI hLVmv"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI cHpDcs"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI kzOuxC"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      placeholder=" "
      readOnly={true}
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      placeholder=" "
      readOnly={true}
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      dir="rtl"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      dir="rtl"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fHsjty RmHsK"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <input
      className="sc-RYuTI cQXEwx"
      placeholder="medium"
      type="email"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <input
      className="sc-RYuTI gKrYEy"
      placeholder="large"
      type="email"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI kZbEvN"
        placeholder="xlarge"
        type="email"
      />
      <label
        className="sc-fHsjty cnpQxB"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI jrRCOC"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI bRyTGZ"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT hwIgqE"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
